tests/paczka2/big_fuzzy/13020837.err
Error in line 8: 7U1H6EgG S800 31,2
Error in line 6: jc7b4ub A878 10,1
Error in line 41: 7U1H6EgG S83 328,4
Error in line 42: G5i5jTrPJiP S3 26,0
Error in line 45: 7U1H6EgG A878 35,1
Error in line 50: G5i5jTrPJiP S83 1,97
Error in line 35: aBSkIuZU S800 85,3
Error in line 60: jc7b4ub S383 343,5
Error in line 54: UETpX7Q S383 52,5
Error in line 46: G5i5jTrPJiP S83 0,5
Error in line 70: G5i5jTrPJiP A878 55,9
Error in line 66: E0vstp A878 19,1
Error in line 88: E0vstp S383 26,9
Error in line 90: jc7b4ub S800 85,5
Error in line 103: UETpX7Q S383 18,2
Error in line 106: S383 S383 17,5
Error in line 113: jc7b4ub A878 13,2
Error in line 118: jc7b4ub S383 72,7
Error in line 129: E0vstp SL3 21,5
Error in line 91: E0vstp A878 37,0
Error in line 138: E0vstp S83 18,3
Error in line 143: G5i5jTrPJiP S83 9,4
Error in line 148: aBSkIuZU S800 29,49
Error in line 150: aBSkIuZU S800 11,1
Error in line 156: E0vstp S83 87,2
Error in line 178: UETpX7Q S800 96,8
Error in line 176: G5i5jTrPJiP S800 165,0
Error in line 172: 7U1H6EgG S383 18,1
Error in line 137: S383 S83 37,1
Error in line 183: aBSkIuZU S800 16,9
Error in line 207: 7U1H6EgG A878 96,2
Error in line 225: G5i5jTrPJiP S83 75,4
Error in line 221: jc7b4ub S383 211,0
Error in line 230: jc7b4ub S83 12,5
Error in line 246: 7U1H6EgG A878 24,23
